--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-   <form id="form1" action="自分のサイトURL">
+   <form id="form1" action="https://sky6776.github.io/blockcheck/">
         <div id="search-container">
             <input id="sbox" name="s" type="text" placeholder="キーワードを入力" />
             <input id="sbtn" type="submit" value="検索" />
@@ -31,7 +31,6 @@
                 <input id="checkbox" class="checkbox" type="checkbox">
                 <label for="checkbox">オークの板材</label>
             </p>
-
             <p>
                 <input id="checkbox" class="checkbox" type="checkbox">
                 <label for="checkbox">オークの階段</label>
