--- a/index.html
+++ b/index.html
@@ -7,72 +7,296 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <form id="form1" action="https://sky6776.github.io/blockcheck/">
+    <form id="form1">
         <div id="search-container">
             <input id="sbox" name="s" type="text" placeholder="キーワードを入力" />
-            <input id="sbtn" type="submit" value="検索" />
+            <input id="sbtn" type="button" value="検索" />
         </div>
     </form>
     <div>
-        <main>
-            <p>
-                <input id="checkbox1" class="checkbox" type="checkbox">
-                <label for="checkbox1">オークの木</label>
-            </p>
-            <p>
-                <input id="checkbox2" class="checkbox" type="checkbox">
-                <label for="checkbox2">樹皮を剥いだオークの原木</label>
-            </p>
-        </main>
+        <p>
+            <input id="checkbox1" class="checkbox" type="checkbox">
+            <label for="checkbox1">オークの木</label>
+        </p>
+        <p>
+            <input id="checkbox2" class="checkbox" type="checkbox">
+            <label for="checkbox2">樹皮を剥いだオークの原木</label>
+        </p>
+        <p>
+            <input id="checkbox3" class="checkbox" type="checkbox">
+            <label for="checkbox3">樹皮を剥いだオークの木</label>
+        </p>
+        <p>
+            <input id="checkbox4" class="checkbox" type="checkbox">
+            <label for="checkbox4">オークの板材</label>
+        </p>
+        <p>
+            <input id="checkbox5" class="checkbox" type="checkbox">
+            <label for="checkbox5">オークの階段</label>
+        </p>
+        <p>
+            <input id="checkbox6" class="checkbox" type="checkbox">
+            <label for="checkbox6">オークのハーフブロック</label>
+        </p>
+        <p>
+            <input id="checkbox7" class="checkbox" type="checkbox">
+            <label for="checkbox7">オークのフェンス</label>
+        </p>
+        <p>
+            <input id="checkbox8" class="checkbox" type="checkbox">
+            <label for="checkbox8">オークのフェンスゲート</label>
+        </p>
+        <p>
+            <input id="checkbox9" class="checkbox" type="checkbox">
+            <label for="checkbox9">オークのドア</label>
+        </p>
+        <p>
+            <input id="checkbox10" class="checkbox" type="checkbox">
+            <label for="checkbox10">オークのトラップドア</label>
+        </p>
+        <p>
+            <input id="checkbox11" class="checkbox" type="checkbox">
+            <label for="checkbox11">トウヒの木</label>
+        </p>
+        <p>
+            <input id="checkbox12" class="checkbox" type="checkbox">
+            <label for="checkbox12">樹皮を剥いだトウヒの原木</label>
+        </p>
+        <p>
+            <input id="checkbox13" class="checkbox" type="checkbox">
+            <label for="checkbox13">樹皮を剥いだトウヒの木</label>
+        </p>
+        <p>
+            <input id="checkbox14" class="checkbox" type="checkbox">
+            <label for="checkbox14">トウヒの板材</label>
+        </p>
+        <p>
+            <input id="checkbox15" class="checkbox" type="checkbox">
+            <label for="checkbox15">トウヒの階段</label>
+        </p>
+        <p>
+            <input id="checkbox16" class="checkbox" type="checkbox">
+            <label for="checkbox16">トウヒのハーフブロック</label>
+        </p>
+        <p>
+            <input id="checkbox17" class="checkbox" type="checkbox">
+            <label for="checkbox17">トウヒのフェンス</label>
+        </p>
+        <p>
+            <input id="checkbox18" class="checkbox" type="checkbox">
+            <label for="checkbox18">トウヒのフェンスゲート</label>
+        </p>
+        <p>
+            <input id="checkbox19" class="checkbox" type="checkbox">
+            <label for="checkbox19">トウヒのドア</label>
+        </p>
+        <p>
+            <input id="checkbox20" class="checkbox" type="checkbox">
+            <label for="checkbox20">トウヒのトラップドア</label>
+        </p>
+        <p>
+            <input id="checkbox21" class="checkbox" type="checkbox">
+            <label for="checkbox21">トウヒの感圧板</label>
+        </p>
+        <p>
+            <input id="checkbox22" class="checkbox" type="checkbox">
+            <label for="checkbox22">トウヒのボタン</label>
+        </p>
+        <p>
+            <input id="checkbox23" class="checkbox" type="checkbox">
+            <label for="checkbox23">シラカバの木</label>
+        </p>
+        <p>
+            <input id="checkbox24" class="checkbox" type="checkbox">
+            <label for="checkbox24">樹皮を剥いだシラカバの原木</label>
+        </p>
+        <p>
+            <input id="checkbox25" class="checkbox" type="checkbox">
+            <label for="checkbox25">樹皮を剥いだシラカバの木</label>
+        </p>
+        <p>
+            <input id="checkbox26" class="checkbox" type="checkbox">
+            <label for="checkbox26">シラカバの板材</label>
+        </p>
+        <p>
+            <input id="checkbox27" class="checkbox" type="checkbox">
+            <label for="checkbox27">シラカバの階段</label>
+        </p>
+        <p>
+            <input id="checkbox28" class="checkbox" type="checkbox">
+            <label for="checkbox28">シラカバのハーフブロック</label>
+        </p>
+        <p>
+            <input id="checkbox29" class="checkbox" type="checkbox">
+            <label for="checkbox29">シラカバのフェンス</label>
+        </p>
+        <p>
+            <input id="checkbox30" class="checkbox" type="checkbox">
+            <label for="checkbox30">シラカバのフェンスゲート</label>
+        </p>
+        <p>
+            <input id="checkbox31" class="checkbox" type="checkbox">
+            <label for="checkbox31">シラカバのドア</label>
+        </p>
+        <p>
+            <input id="checkbox32" class="checkbox" type="checkbox">
+            <label for="checkbox32">シラカバのトラップドア</label>
+        </p>
+        <p>
+            <input id="checkbox33" class="checkbox" type="checkbox">
+            <label for="checkbox33">シラカバの感圧板</label>
+        </p>
+        <p>
+            <input id="checkbox34" class="checkbox" type="checkbox">
+            <label for="checkbox34">シラカバのボタン</label>
+        </p>
+        <p>
+            <input id="checkbox35" class="checkbox" type="checkbox">
+            <label for="checkbox35">ジャングルの木</label>
+        </p>
+        <p>
+            <input id="checkbox36" class="checkbox" type="checkbox">
+            <label for="checkbox36">樹皮を剥いだジャングルの原木</label>
+        </p>
+        <p>
+            <input id="checkbox37" class="checkbox" type="checkbox">
+            <label for="checkbox37">樹皮を剥いだジャングルの木</label>
+        </p>
+        <p>
+            <input id="checkbox38" class="checkbox" type="checkbox">
+            <label for="checkbox38">ジャングルの板材</label>
+        </p>
+        <p>
+            <input id="checkbox39" class="checkbox" type="checkbox">
+            <label for="checkbox39">ジャングルの階段</label>
+        </p>
+        <p>
+            <input id="checkbox40" class="checkbox" type="checkbox">
+            <label for="checkbox40">ジャングルのハーフブロック</label>
+        </p>
+        <p>
+            <input id="checkbox41" class="checkbox" type="checkbox">
+            <label for="checkbox41">ジャングルのフェンス</label>
+        </p>
+        <p>
+            <input id="checkbox42" class="checkbox" type="checkbox">
+            <label for="checkbox42">ジャングルのフェンスゲート</label>
+        </p>
+        <p>
+            <input id="checkbox43" class="checkbox" type="checkbox">
+            <label for="checkbox43">ジャングルのドア</label>
+        </p>
+        <p>
+            <input id="checkbox44" class="checkbox" type="checkbox">
+            <label for="checkbox44">ジャングルのトラップドア</label>
+        </p>            <p>
+            <input id="checkbox45" class="checkbox" type="checkbox">
+            <label for="checkbox45">ジャングルの感圧板</label>
+        </p>
+        <p>
+            <input id="checkbox46" class="checkbox" type="checkbox">
+            <label for="checkbox46">ジャングルのボタン</label>
+        </p>
+        <p>
+            <input id="checkbox47" class="checkbox" type="checkbox">
+            <label for="checkbox47">アカシアの木</label>
+        </p>
+        <p>
+            <input id="checkbox48" class="checkbox" type="checkbox">
+            <label for="checkbox48">樹皮を剥いだアカシアの原木</label>
+        </p>
+        <p>
+            <input id="checkbox49" class="checkbox" type="checkbox">
+            <label for="checkbox49">樹皮を剥いだアカシアの木</label>
+        </p>
+        <p>
+            <input id="checkbox50" class="checkbox" type="checkbox">
+            <label for="checkbox50">アカシアの板材</label>
+        </p>
+        <p>
+            <input id="checkbox51" class="checkbox" type="checkbox">
+            <label for="checkbox51">アカシアの階段</label>
+        </p>
+        <p>
+            <input id="checkbox52" class="checkbox" type="checkbox">
+            <label for="checkbox52">アカシアのハーフブロック</label>
+        </p>
+        <p>
+            <input id="checkbox53" class="checkbox" type="checkbox">
+            <label for="checkbox53">アカシアのフェンス</label>
+        </p>
+        <p>
+            <input id="checkbox54" class="checkbox" type="checkbox">
+            <label for="checkbox54">アカシアのフェンスゲート</label>
+        </p>
+        <p>
+            <input id="checkbox55" class="checkbox" type="checkbox">
+            <label for="checkbox55">アカシアのドア</label>
+        </p>
+        <p>
+            <input id="checkbox56" class="checkbox" type="checkbox">
+            <label for="checkbox56">アカシアのトラップドア</label>
+        </p>
+        <p>
+            <input id="checkbox57 class="checkbox" type="checkbox">
+            <label for="checkbox57">アカシアの感圧板</label>
+        </p>
+        <p>
+            <input id="checkbox58" class="checkbox" type="checkbox">
+            <label for="checkbox58">アカシアのボタン</label>
+        </p>
+        <!-- 他のチェックボックスも同様に追加 -->
     </div>
     <script>
-const checkbox1 = document.getElementById('checkbox1');
-const checkbox2 = document.getElementById('checkbox2');
+        // チェックボックスの要素を取得
+        const checkboxes = document.querySelectorAll('.checkbox');
 
-checkbox1.checked = localStorage.getItem('checkbox1Checked') === 'true';
-checkbox2.checked = localStorage.getItem('checkbox2Checked') === 'true';
+        // ページが読み込まれたときにチェックボックスの状態をlocalStorageから取得して設定
+        checkboxes.forEach((checkbox) => {
+            const checkboxId = checkbox.id;
+            checkbox.checked = localStorage.getItem(`${checkboxId}Checked`) === 'true';
+        });
 
-checkbox1.addEventListener('change', () => {
-    localStorage.setItem('checkbox1Checked', checkbox1.checked);
-});
+        // チェックボックスの状態が変化したときにlocalStorageに保存
+        checkboxes.forEach((checkbox) => {
+            checkbox.addEventListener('change', () => {
+                const checkboxId = checkbox.id;
+                localStorage.setItem(`${checkboxId}Checked`, checkbox.checked);
+            });
+        });
 
-checkbox2.addEventListener('change', () => {
-    localStorage.setItem('checkbox2Checked', checkbox2.checked);
-});
+        // 検索ボタンの要素を取得
+        const searchBox = document.getElementById('sbox');
+        const searchButton = document.getElementById('sbtn');
 
-const searchBox = document.getElementById('sbox');
-
-const searchButton = document.getElementById('sbtn');
-
-function hideCheckbox(checkboxElement) {
-    checkboxElement.parentElement.style.display = 'none';
-}
-
-function showCheckbox(checkboxElement) {
-    checkboxElement.parentElement.style.display = 'block';
-}
-
-searchButton.addEventListener('click', () => {
-    const keyword = searchBox.value.toLowerCase();
-
-    if (keyword.trim() === '') {
-        showCheckbox(checkbox1);
-        showCheckbox(checkbox2);
-    } else {
-        if (!checkbox1.labels[0].textContent.toLowerCase().includes(keyword)) {
-            hideCheckbox(checkbox1);
-        } else {
-            showCheckbox(checkbox1);
+        // チェックボックスを非表示にする関数
+        function hideCheckbox(checkboxElement) {
+            checkboxElement.parentElement.style.display = 'none';
         }
 
-        if (!checkbox2.labels[0].textContent.toLowerCase().includes(keyword)) {
-            hideCheckbox(checkbox2);
-        } else {
-            showCheckbox(checkbox2);
+        // チェックボックスを表示する関数
+        function showCheckbox(checkboxElement) {
+            checkboxElement.parentElement.style.display = 'block';
         }
-    }
-});
 
+        // 検索ボタンクリック時の処理
+        searchButton.addEventListener('click', () => {
+            const keyword = searchBox.value.toLowerCase(); // 入力されたキーワードを小文字に変換
+
+            checkboxes.forEach((checkbox) => {
+                const label = checkbox.nextElementSibling; // チェックボックスの次の要素はラベル
+                const labelText = label.textContent.toLowerCase(); // ラベルのテキストを小文字に変換
+
+                if (keyword.trim() === '' || labelText.includes(keyword)) {
+                    // キーワードが空白の場合、またはキーワードがラベルに含まれている場合、チェックボックスを表示
+                    showCheckbox(checkbox);
+                } else {
+                    // それ以外の場合、チェックボックスを非表示にする
+                    hideCheckbox(checkbox);
+                }
+            });
+        });
     </script>
 </body>
 </html>
+
